--- a/index.html
+++ b/index.html
@@ -105,7 +105,58 @@
             </li>
           </ul>
         </section>
-        <section id="reservation" class="reservation"></section>
+        <section id="reservation" class="reservation">
+          <h2 class="reservation__title">Book a table</h2>
+          <form class="reservation__form form">
+            <fieldset class="form__fieldset">
+              <label for="name-input" class="form__label">
+                Name *
+                <input
+                  type="text"
+                  class="form__input"
+                  id="name-input"
+                  placeholder="Name surname"
+                  required
+                />
+              </label>
+              <label for="guests-input" class="form__label">
+                Number of guests *
+                <input
+                  type="number"
+                  class="form__input"
+                  id="guests-input"
+                  min="1"
+                  max="8"
+                  placeholder="1-8"
+                  required
+                />
+              </label>
+              <label for="date-input" class="form__label">
+                Date & Time *
+                <input type="datetime-local" class="form__input" id="date-input" required />
+              </label>
+              <label for="email-input" class="form__label">
+                Your email *
+                <input
+                  type="email"
+                  class="form__input"
+                  id="email-input"
+                  placeholder="email@email.com"
+                  required
+                />
+              </label>
+            </fieldset>
+            <button class="form__button">Book a table</button>
+            <label for="table-input" class="form__label form__label_type_checkbox">
+              <input
+                type="checkbox"
+                class="form__checkbox form__label_type_checkbox"
+                id="table-input"
+                required
+              />
+              I agree with the terms of use
+          </form>
+        </section>
         <section id="menu" class="menu"></section>
         <section id="contacts" class="contacts"></section>
       </main>
