another update to my project

--- a/index.html
+++ b/index.html
@@ -133,7 +133,12 @@
               </label>
               <label for="date-input" class="form__label">
                 Date & Time *
-                <input type="datetime-local" class="form__input" id="date-input" required />
+                <input
+                  type="datetime-local"
+                  class="form__input"
+                  id="date-input"
+                  required
+                />
               </label>
               <label for="email-input" class="form__label">
                 Your email *
@@ -147,7 +152,10 @@
               </label>
             </fieldset>
             <button class="form__button">Book a table</button>
-            <label for="table-input" class="form__label form__label_type_checkbox">
+            <label
+              for="table-input"
+              class="form__label form__label_type_checkbox"
+            >
               <input
                 type="checkbox"
                 class="form__checkbox form__label_type_checkbox"
@@ -155,6 +163,7 @@
                 required
               />
               I agree with the terms of use
+            </label>
           </form>
         </section>
         <section id="menu" class="menu"></section>
