--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             >
               <input
                 type="checkbox"
-                class="form__checkbox form__label_type_checkbox"
+                class="form__label form__label_type_checkbox"
                 id="table-input"
                 required
               />
