--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <header class="header">
         <nav class="nav">
           <img
-            src="./images/se_project_2_files/logo_coffeeshop_dark.svg"
+            src="./images/logo_coffeeshop_dark.svg"
             alt="CoffeeShop Logo"
             class="nav__logo"
           />
@@ -50,7 +50,7 @@
           the cozy vibes to help you get creative.
         </p>
         <img
-          src="./images/se_project_2_files/inside_coffee_shop.png"
+          src="./images/inside_coffee_shop.png"
           alt="Coffee Shop Illustration"
           class="header__image"
         />
@@ -243,40 +243,59 @@
           </ul>
         </section>
         <section id="about" class="about">
-          <h4 class="about__title">About the coffee Shop</h1>
-            <li class="about__content">
-              <ul class="about__paragraph">Our coffee shop is located in the Triple Peaks Library. It features 6
-                tables and free WiFi.</ul>
-              <ul class="about__paragraph">Our main mission is keeping guests cozy and energized.</ul>
-              <ul class="about__paragraph">Besides that, we try to reduce our environmental impact — so we
-                don't sell single-use cups. But you can buy one of our reusable cups!</ul>
+          <h4 class="about__title">About the coffee Shop</h4>
+          <ul class="about__content">
+            <li class="about__paragraph">
+              Our coffee shop is located in the Triple Peaks Library. It
+              features 6 tables and free WiFi.
             </li>
-            <div class="about__circle"></div>
-<div class="about__circle about__circle_animation_blurred"></div>
+            <li class="about__paragraph">
+              Our main mission is keeping guests cozy and energized.
+            </li>
+            <li class="about__paragraph">
+              Besides that, we try to reduce our environmental impact — so we
+              don't sell single-use cups. But you can buy one of our reusable
+              cups!
+            </li>
+          </ul>
+          <div class="about__circle"></div>
+          <div class="about__circle about__circle_animation_blurred"></div>
         </section>
       </main>
       <footer class="footer">
         <div class="footer__content">
           <div class="footer__logo">
-            <img src="./images/se_project_2_files/logo_coffeeshop_light.svg" alt="coffeshop logo" class="footer__logo-image">
+            <img
+              src="./images/logo_coffeeshop_light.svg"
+              alt="coffeshop logo"
+              class="footer__logo-image"
+            />
           </div>
           <div>
             <h3 class="footer__social-heading">Social media</h3>
             <ul class="footer__list">
               <li class="footer__list-item">
                 <a href="#" class="footer__social-link">
-                  <img src="./images/facebook_white.svg" alt="social link fb" class="footer__social-icon" />Facebook
+                  <img
+                    src="./images/facebook_white.svg"
+                    alt="social link fb"
+                    class="footer__social-icon"
+                  />Facebook
                 </a>
               </li>
               <li class="footer__list-item">
                 <a href="#" class="footer__social-link">
-                  <img src="./images/instagram_white.svg" alt="social link ig" class="footer__social-icon" />Instagram
+                  <img
+                    src="./images/instagram_white.svg"
+                    alt="social link ig"
+                    class="footer__social-icon"
+                  />Instagram
                 </a>
               </li>
             </ul>
           </div>
         </div>
-        <p class="footer__copyright">&#169 2024 Wes Albright</p>
+        <p class="footer__copyright">&#169; 2024 Wes Albright</p>
       </footer>
     </div>
   </body>
