--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Wes Albright" />
     <meta name="keywords" content="HTML, CSS" />
     <link rel="stylesheet" href="./pages/index.css" />
-    <link rel="stylesheet" href="./vendor/normalize.css" />
+
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -76,8 +76,6 @@
             <li>
               <iframe
                 class="recipes__iframe"
-                width="560"
-                height="315"
                 src="https://www.youtube.com/embed/j6VlT_jUVPc?si=3F7QKIpzYG2YRh76"
                 title="YouTube video player"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -91,8 +89,6 @@
             <li>
               <iframe
                 class="recipes__iframe"
-                width="560"
-                height="315"
                 src="https://www.youtube.com/embed/st571DYYTR8?si=2EfSMdv0OpfZfeKo"
                 title="YouTube video player"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -154,11 +150,11 @@
             <button class="form__button">Book a table</button>
             <label
               for="table-input"
-              class="form__label form__label_type_checkbox"
+              class="form__checkbox form__label_type_checkbox"
             >
               <input
                 type="checkbox"
-                class="form__label form__label_type_checkbox"
+                class="form__checkbox form__label_type_checkbox"
                 id="table-input"
                 required
               />
@@ -242,22 +238,22 @@
             </li>
           </ul>
         </section>
-        <section id="about" class="about">
-          <h4 class="about__title">About the coffee Shop</h4>
-          <ul class="about__content">
-            <li class="about__paragraph">
+        <section id="contacts" class="about">
+          <h2 class="about__title">About the coffee Shop</h2>
+          <div class="about__content">
+            <p class="about__paragraph">
               Our coffee shop is located in the Triple Peaks Library. It
               features 6 tables and free WiFi.
-            </li>
-            <li class="about__paragraph">
+            </p>
+            <p class="about__paragraph">
               Our main mission is keeping guests cozy and energized.
-            </li>
-            <li class="about__paragraph">
+            </p>
+            <p class="about__paragraph">
               Besides that, we try to reduce our environmental impact — so we
               don't sell single-use cups. But you can buy one of our reusable
               cups!
-            </li>
-          </ul>
+            </p>
+          </div>
           <div class="about__circle"></div>
           <div class="about__circle about__circle_animation_blurred"></div>
         </section>
