--- a/index.html
+++ b/index.html
@@ -150,11 +150,11 @@
             <button class="form__button">Book a table</button>
             <label
               for="table-input"
-              class="form__checkbox form__label_type_checkbox"
+              class="form__label form__label_type_checkbox"
             >
               <input
                 type="checkbox"
-                class="form__checkbox form__label_type_checkbox"
+                class="form__checkbox"
                 id="table-input"
                 required
               />
